"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2009-03-27	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-12:
	  hacprsim bug: node fanout was mistakenly reporting 
		invariants in some cases.
		Re-defined node_is_used to only count fanout to rules,
		not invariants.  


2009-03-20	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-11:
	  hacprsim: "unstable fatal" and "interference fatal" were not
		exiting with nonzero status as advertised before, 
		it would just break, but allow normal continuation.
		This is now fixed, with test cases added.


2009-03-17	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-10:
	  hacprsim: tab-completion minor fix: handle shell commmands
		beginning with '!' specially, defaulting to filename compl.
	  finish implementation of treating invariant failures as fatal
		errors by throwing/catching exceptions.  
		This happens to be needed when we want a PLI co-simulation
		to terminate as soon as the first error occurs.  
		Test case added.


	* HACKT-00-01-04-main-00-83-09:
	  hacprsim: backtrace command now takes optional value
		argument to choose what value to query, if the user
		does not want to use the default current value.  
		Documented, tested, test case added.


2009-03-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-08:
	  Fixed MAJOR performance regression from branch merge 
		-footprint-02-05.  footprint_manager::insert() and lookup()
		were calling expensive construction and allocations
		of temporary footprints for set operations, 
		causing 10x to 20x slowdown.  :(
		Fixed by using partial construction trick *hack* alert.


2009-03-09	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-07:
	  hacprsim: fanin/fanout now report channel sinks and sources